sql and network io done